--- a/html/PBWFI/PBWFI050000.html
+++ b/html/PBWFI/PBWFI050000.html
@@ -103,7 +103,7 @@
 					</div>
 					<!-- //form -->
 
-					<div class="exchange-wrap content-fluid">
+					<div class="exchange-wrap content-fluid mb-24">
 						<div class="caption-visible ar mb8">(단위: 원)</div>
 						<div class="exchange-list">
 							<button class="flag flag-us flag-fluid" data-micromodal-trigger="modal-country"><strong>USD</strong><span>미국 달러</span></button>
