--- a/html/PBWFU/PBWFU000000.html
+++ b/html/PBWFU/PBWFU000000.html
@@ -258,7 +258,7 @@
 					<!-- //figure-list -->
 
 					<!-- group-form -->
-					<div class="group-form mt16">
+					<div class="group-form mt16 mb-24">
 						<div class="group-title py16">
 							<strong class="headline-small inner-ico"><i class="ico-keyword bg-yellow-500"></i>추천 키워드</strong>
 						</div>
