--- a/html/PBWFU/PBWFU060000.html
+++ b/html/PBWFU/PBWFU060000.html
@@ -122,7 +122,7 @@
 							</ul>
 						</div>
 
-						<div class="fund-diff-detail">
+						<div class="fund-diff-detail mb-24">
 
 							<div class="fund-diff-inner">
 								<h3 class="title-large">기본정보</h3>
