--- a/html/PBWMA/PBWMA010000.html
+++ b/html/PBWMA/PBWMA010000.html
@@ -137,7 +137,7 @@
 					</div>
 
 
-					<div class="main-fund-banner content-fluid">
+					<div class="main-fund-banner content-fluid mb-24">
 						<figure>
 							<picture>
 								<source srcset="/resources/images/PBWMA/image_fund01.png 2x">
