--- a/html/PBWCL/PBWCL070000_tab02.html
+++ b/html/PBWCL/PBWCL070000_tab02.html
@@ -96,7 +96,7 @@
 					</style>
 
 					<!-- customer-card-list -->
-					<div class="customer-info-list">
+					<div class="customer-info-list mb-24">
 
 						<div class="customer-info-title">
 							<strong class="headline-large ac">삼성중공업(주)</strong>
