--- a/html/PBWCH/PBWCH000000.html
+++ b/html/PBWCH/PBWCH000000.html
@@ -90,16 +90,15 @@
 
 					<!-- snackbar-content -->
 					<div class="snackbar-content is-sticky">
-						<a href="#" class="fab fab-secondary fab-square" aria-label="펀드/지수 검색"><i class="ico-search bg-icon-default"></i></a>
+						<a href="#" class="fab fab-secondary fab-square" data-micromodal-trigger="modal-search" aria-label="펀드/지수 검색"><i class="ico-search bg-icon-default"></i></a>
 					</div>
 					<!-- //snackbar-content -->
 
 
 					<!-- sticky-content -->
-					<div class="sticky-sentinal"></div>
+					<!-- <div class="sticky-sentinal"></div>
 					<div class="sticky-content content-fluid">
 						<div class="sticky-content-inner">
-							<!-- form -->
 							<div class="form">
 								<div class="label"></div>
 								<div class="input-wrap input-btn">
@@ -109,9 +108,8 @@
 								</div>
 								<p class="validate-text"></p>
 							</div>
-							<!-- //form -->
 						</div>
-					</div>
+					</div> -->
 					<!-- //sticky-content -->
 
 
@@ -271,6 +269,135 @@
 	<!-- //micromodal -->
 
 
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-search">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+				<div class="modal__header">
+					<strong class="modal__title title-large">기간별 기준가/수익률</strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+					<!-- content -->
+					<div class="content">
+
+						<!-- sticky-content -->
+						<div class="sticky-sentinal"></div>
+						<div class="sticky-content content-fluid">
+							<div class="sticky-content-inner">
+								<!-- form -->
+								<div class="form">
+									<div class="label"></div>
+									<div class="input-wrap input-btn">
+										<input type="text" placeholder="펀드/지수명으로 검색해 보세요." aria-label="검색">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+										<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
+									</div>
+									<p class="validate-text"></p>
+								</div>
+								<!-- //form -->
+							</div>
+						</div>
+						<!-- //sticky-content -->
+
+
+						<!-- group-form -->
+						<div class="group-form py16">
+							<div class="group-title">
+								<strong class="title-medium fw-500">최근 본 펀드/지수 담기</strong>
+							</div>
+							<div class="group-content content-fluid px0 mt14">
+								<ul class="d-flex overflow-list px16">
+									<li>
+										<button class="btn-xsmall btn-primary btn-round text-ellipsis" aria-label="선택됨"><span style="max-width:122px;">KOSPI</span></button>
+									</li>
+									<li>
+										<button class="btn-xsmall btn-outlined btn-round text-ellipsis"><span style="max-width:122px;">피델리티글로벌배텍스트</span></button>
+									</li>
+									<li>
+										<button class="btn-xsmall btn-outlined btn-round text-ellipsis"><span style="max-width:122px;">신한글로벌탄소중립</span></button>
+									</li>
+									<li>
+										<button class="btn-xsmall btn-outlined btn-round text-ellipsis"><span style="max-width:122px;">DOW</span></button>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<!-- //group-form -->
+
+						<p class="description info body-small fc-typography-caption mt16">주요 지수의 비교 데이터를 제공합니다. <br> 지수는 아래에서 선택해주세요.</p>
+
+
+						<!-- group-form -->
+						<div class="group-form mt16">
+							<div class="group-content content-fluid px0">
+								<!-- tab-content -->
+								<div class="tab-content">
+									<ul class="tab-list tab-col overflow-list px24" role="tablist">
+										<li class="tab tab-active"><a role="tab" href="#" class="fs-18">주가지수</a></li>
+										<li class="tab"><a role="tab" href="#" class="fs-18">채권금리</a></li>
+										<li class="tab"><a role="tab" href="#" class="fs-18">환율</a></li>
+										<li class="tab"><a role="tab" href="#" class="fs-18">원자재</a></li>
+										<li class="tab"><a role="tab" href="#" class="fs-18">나의 관심펀드</a></li>
+									</ul>
+								</div>
+
+								<!-- //tab-content -->
+								<div class="tab-content mt16">
+									<div class="d-flex flex-wrap px16 gap10 bg-transparent">
+										<button class="btn-xsmall btn-primary btn-round" id="error" aria-label="선택됨">KOSPI</button>
+										<button class="btn-xsmall btn-primary btn-round" aria-label="선택됨">KOSDAQ</button>
+										<button class="btn-xsmall btn-outlined btn-round">KOSPI200</button>
+										<button class="btn-xsmall btn-outlined btn-round">S&P500</button>
+										<button class="btn-xsmall btn-outlined btn-round">NASDAQ</button>
+										<button class="btn-xsmall btn-outlined btn-round">DOW</button>
+										<button class="btn-xsmall btn-outlined btn-round">EUROSTOXX50</button>
+										<button class="btn-xsmall btn-outlined btn-round">상해종합</button>
+										<button class="btn-xsmall btn-outlined btn-round">HSCEI</button>
+										<button class="btn-xsmall btn-outlined btn-round">HSCEI</button>
+										<button class="btn-xsmall btn-outlined btn-round">HSCEI</button>
+										<button class="btn-xsmall btn-outlined btn-round">HSCEI</button>
+										<button class="btn-xsmall btn-outlined btn-round">HSCEI</button>
+										<button class="btn-xsmall btn-outlined btn-round">HSCEI</button>
+										<button class="btn-xsmall btn-outlined btn-round">HSCEI</button>
+									</div>
+								</div>
+
+							</div>
+						</div>
+						<!-- //group-form -->
+
+
+						<!-- bottom-btn -->
+						<div class="bottom-btn bottom-btn-shadow">
+							<div class="bottom-btn-title">
+								<strong class="title-medium">최대 3개를 비교할 수 있습니다.</strong>
+							</div>
+							<div class="btn-wrap btn-nowrap overflow-list">
+								<button type="button" class="btn-xsmall btn-primary btn-round" aria-label="비교선택"><span>KOSPI</span><i class="ico-close-16"></i></button>
+								<button type="button" class="btn-xsmall btn-primary btn-round" aria-label="비교선택"><span>KOSDAQ</span><i class="ico-close-16"></i></button>
+								<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-add"></i></button>
+							</div>
+							<div class="btn-wrap btn-nowrap overflow-list">
+								<button type="button" class="btn-xsmall btn-outlined btn-round"><i class=" ico-add"></i></button>
+								<button type="button" class="btn-xsmall btn-outlined btn-round"><i class=" ico-add"></i></button>
+								<button type="button" class="btn-xsmall btn-outlined btn-round"><i class=" ico-add"></i></button>
+							</div>
+							<div class="btn-wrap">
+								<button type="button" class="btn-medium btn-primary">비교하기</button>
+							</div>
+						</div>
+						<!-- //bottom-btn -->
+
+					</div>
+					<!-- //content -->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+
 
 	<script>
 		var options2 = {
@@ -326,6 +453,12 @@
 			detail
 		}) => {
 			chart2.render();
+		});
+	</script>
+	<script>
+		$('#error').click(function(event) {
+			toastr.error('', '더이상 추가할 수 없습니다.')
+			toastr.error('', '이미 추가된 펀드/지수입니다.')
 		});
 	</script>
 </body>
