--- a/html/PBWMA/PBWMA040000.html
+++ b/html/PBWMA/PBWMA040000.html
@@ -150,7 +150,7 @@
 
 						<div class="exchange-wrap mt16">
 							<div class="exchange-list">
-								<button class="flag flag-us flag-fluid" data-micromodal-trigger="modal-country"><strong>USD</strong><span>미국 달러</span></button>
+								<div class="flag flag-us flag-fluid"><strong>USD</strong><span>미국 달러</span></div>
 								<div class="stroke my16"></div>
 								<ul class="label-list">
 									<li class="list01"><i aria-label="매매기준율">9,999.99</i></li>
@@ -159,7 +159,7 @@
 								</ul>
 							</div>
 							<div class="exchange-list">
-								<button class="flag flag-jp flag-fluid" data-micromodal-trigger="modal-country"><strong>JPY</strong><span>일본 100엔</span></button>
+								<div class="flag flag-jp flag-fluid"><strong>JPY</strong><span>일본 100엔</span></div>
 								<div class="stroke my16"></div>
 								<ul class="label-list">
 									<li class="list01"><i aria-label="매매기준율">9,999.99</i></li>
@@ -168,7 +168,7 @@
 								</ul>
 							</div>
 							<div class="exchange-list">
-								<button class="flag flag-eu flag-fluid" data-micromodal-trigger="modal-country"><strong>EUR</strong><span>유럽 유로</span></button>
+								<div class="flag flag-eu flag-fluid"><strong>EUR</strong><span>유럽 유로</span></div>
 								<div class="stroke my16"></div>
 								<ul class="label-list">
 									<li class="list01"><i aria-label="매매기준율">9,999.99</i></li>
@@ -177,7 +177,7 @@
 								</ul>
 							</div>
 							<div class="exchange-list">
-								<button class="flag flag-gb flag-fluid" data-micromodal-trigger="modal-country"><strong>GBP</strong><span>영국 파운드</span></button>
+								<div class="flag flag-gb flag-fluid"><strong>GBP</strong><span>영국 파운드</span></div>
 								<div class="stroke my16"></div>
 								<ul class="label-list">
 									<li class="list01"><i aria-label="매매기준율">9,999.99</i></li>
@@ -186,7 +186,7 @@
 								</ul>
 							</div>
 							<div class="exchange-list">
-								<button class="flag flag-ca flag-fluid" data-micromodal-trigger="modal-country"><strong>CAD</strong><span>캐나다 달러</span></button>
+								<div class="flag flag-ca flag-fluid"><strong>CAD</strong><span>캐나다 달러</span></div>
 								<div class="stroke my16"></div>
 								<ul class="label-list">
 									<li class="list01"><i aria-label="매매기준율">9,999.99</i></li>
@@ -195,7 +195,7 @@
 								</ul>
 							</div>
 							<div class="exchange-list">
-								<button class="flag flag-ch flag-fluid" data-micromodal-trigger="modal-country"><strong>CHF</strong><span>스위스 프랑</span></button>
+								<div class="flag flag-ch flag-fluid"><strong>CHF</strong><span>스위스 프랑</span></div>
 								<div class="stroke my16"></div>
 								<ul class="label-list">
 									<li class="list01"><i aria-label="매매기준율">9,999.99</i></li>
@@ -204,7 +204,7 @@
 								</ul>
 							</div>
 							<div class="exchange-list">
-								<button class="flag flag-hk flag-fluid" data-micromodal-trigger="modal-country"><strong>HKD</strong><span>홍콩 달러</span></button>
+								<div class="flag flag-hk flag-fluid"><strong>HKD</strong><span>홍콩 달러</span></div>
 								<div class="stroke my16"></div>
 								<ul class="label-list">
 									<li class="list01"><i aria-label="매매기준율">9,999.99</i></li>
@@ -213,7 +213,7 @@
 								</ul>
 							</div>
 							<div class="exchange-list">
-								<button class="flag flag-cn flag-fluid" data-micromodal-trigger="modal-country"><strong>CNY</strong><span>중국 위안</span></button>
+								<div class="flag flag-cn flag-fluid"><strong>CNY</strong><span>중국 위안</span></div>
 								<div class="stroke my16"></div>
 								<ul class="label-list">
 									<li class="list01"><i aria-label="매매기준율">9,999.99</i></li>
@@ -222,7 +222,7 @@
 								</ul>
 							</div>
 							<div class="exchange-list">
-								<button class="flag flag-th flag-fluid" data-micromodal-trigger="modal-country"><strong>THB</strong><span>태국 바트</span></button>
+								<div class="flag flag-th flag-fluid"><strong>THB</strong><span>태국 바트</span></div>
 								<div class="stroke my16"></div>
 								<ul class="label-list">
 									<li class="list01"><i aria-label="매매기준율">9,999.99</i></li>
@@ -231,7 +231,7 @@
 								</ul>
 							</div>
 							<div class="exchange-list">
-								<button class="flag flag-se flag-fluid" data-micromodal-trigger="modal-country"><strong>SEK</strong><span>스웨덴 크로나</span></button>
+								<div class="flag flag-se flag-fluid"><strong>SEK</strong><span>스웨덴 크로나</span></div>
 								<div class="stroke my16"></div>
 								<ul class="label-list">
 									<li class="list01"><i aria-label="매매기준율">9,999.99</i></li>
@@ -240,7 +240,7 @@
 								</ul>
 							</div>
 							<div class="exchange-list">
-								<button class="flag flag-au flag-fluid" data-micromodal-trigger="modal-country"><strong>AUD</strong><span>호주 달러</span></button>
+								<div class="flag flag-au flag-fluid"><strong>AUD</strong><span>호주 달러</span></div>
 								<div class="stroke my16"></div>
 								<ul class="label-list">
 									<li class="list01"><i aria-label="매매기준율">9,999.99</i></li>
@@ -249,7 +249,7 @@
 								</ul>
 							</div>
 							<div class="exchange-list">
-								<button class="flag flag-dk flag-fluid" data-micromodal-trigger="modal-country"><strong>DKK</strong><span>덴마크 크로네</span></button>
+								<div class="flag flag-dk flag-fluid"><strong>DKK</strong><span>덴마크 크로네</span></div>
 								<div class="stroke my16"></div>
 								<ul class="label-list">
 									<li class="list01"><i aria-label="매매기준율">9,999.99</i></li>
@@ -258,7 +258,7 @@
 								</ul>
 							</div>
 							<div class="exchange-list">
-								<button class="flag flag-no flag-fluid" data-micromodal-trigger="modal-country"><strong>NOK</strong><span>노르웨이 크로네</span></button>
+								<div class="flag flag-no flag-fluid"><strong>NOK</strong><span>노르웨이 크로네</span></div>
 								<div class="stroke my16"></div>
 								<ul class="label-list">
 									<li class="list01"><i aria-label="매매기준율">9,999.99</i></li>
@@ -267,7 +267,7 @@
 								</ul>
 							</div>
 							<div class="exchange-list">
-								<button class="flag flag-sg flag-fluid" data-micromodal-trigger="modal-country"><strong>SGD</strong><span>싱가포르 달러</span></button>
+								<div class="flag flag-sg flag-fluid"><strong>SGD</strong><span>싱가포르 달러</span></div>
 								<div class="stroke my16"></div>
 								<ul class="label-list">
 									<li class="list01"><i aria-label="매매기준율">9,999.99</i></li>
@@ -276,7 +276,7 @@
 								</ul>
 							</div>
 							<div class="exchange-list">
-								<button class="flag flag-nz flag-fluid" data-micromodal-trigger="modal-country"><strong>NZD</strong><span>뉴질랜드 달러</span></button>
+								<div class="flag flag-nz flag-fluid"><strong>NZD</strong><span>뉴질랜드 달러</span></div>
 								<div class="stroke my16"></div>
 								<ul class="label-list">
 									<li class="list01"><i aria-label="매매기준율">9,999.99</i></li>
@@ -285,7 +285,7 @@
 								</ul>
 							</div>
 							<div class="exchange-list">
-								<button class="flag flag-ph flag-fluid" data-micromodal-trigger="modal-country"><strong>PHP</strong><span>필리핀 페소</span></button>
+								<div class="flag flag-ph flag-fluid"><strong>PHP</strong><span>필리핀 페소</span></div>
 								<div class="stroke my16"></div>
 								<ul class="label-list">
 									<li class="list01"><i aria-label="매매기준율">9,999.99</i></li>
