--- a/html/PBWIV/PBWIV120000.html
+++ b/html/PBWIV/PBWIV120000.html
@@ -113,7 +113,8 @@
 					<!-- //tab-content -->
 
 					<div class="financial-news">
-						<p class="description info body-small fc-typography-caption mt16">뉴스데이터는 하루에 2번(오전 7시 이후, 오후 3시 이후)업데이트됩니다. </p>
+						<p class="description info body-small fc-typography-caption mt16">뉴스데이터는 하루에 2번(오전 7시 이후, 오후 3시 이후)업데이트됩니다. <br>
+							펀드는 6개월간의 뉴스를 조회할 수 있습니다.(전체탭에서는 오늘의 펀드뉴스만 조회됩니다.)</p>
 
 						<div class="financial-news-list mt16">
 							<ul>
