--- a/html/PBWMA/PBWMA030000.html
+++ b/html/PBWMA/PBWMA030000.html
@@ -98,12 +98,27 @@
 									<div class="date">2024-11-06 10:48</div>
 								</a>
 							</li>
+
+							<li class="unread">
+								<div aria-label="읽지 않음">
+									<strong>제목이 노출됩니다.</strong>
+									<div class="text">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</div>
+									<div class="date">2024-11-06 10:48</div>
+								</div>
+							</li>
 							<li>
 								<a href="#">
 									<strong>제목이 노출됩니다.</strong>
 									<div class="text">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</div>
 									<div class="date">2024-11-06 10:48</div>
 								</a>
+							</li>
+							<li>
+								<div>
+									<strong>제목이 노출됩니다.</strong>
+									<div class="text">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</div>
+									<div class="date">2024-11-06 10:48</div>
+								</div>
 							</li>
 							<li>
 								<a href="#">
