--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -1230,6 +1230,7 @@
 			spaceBetween: 1,
 			effect: 'cards',
 			observer: true,
+			observeParents: true,
 			on: {
 				//기본 0번 slide에 checked 삽입
 				//slide change 시 실행(등록, 수정페이지에 삽입)
