--- a/html/PBWBU/PBWBU010001.html
+++ b/html/PBWBU/PBWBU010001.html
@@ -516,19 +516,13 @@
 						</div>
 						<!-- //group-form -->
 
-						<p class="description error body-small mt40 fc-typography-caption">등록된 고객명함은 현재 소속 지점으로 등록되어 지점 이동 후에는 조회하실 수 없습니다. <br> 개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
-
-					</div>
-
-				</div>
-				<div class="modal__footer">
-					<!-- bottom-btn -->
-					<div class="bottom-btn">
+						<p class="descrip
+                        tion error body-small mt40 fc-typography-caption">등록된 고객명함은 현재 소속 지점으로 등록되어 지점 이동 후에는 조회하실 수 없습니다. <br> 개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
 						<div class="btn-wrap">
 							<button type="button" class="btn-large btn-primary" onclick="toastr.success('', '저장되었습니다.')" data-micromodal-close><i class="ico-check"></i>저장</button>
 						</div>
 					</div>
-					<!-- //bottom-btn -->
+
 				</div>
 			</div>
 		</div>
