--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -1243,6 +1243,28 @@
 				}
 			}
 		});
+
+
+		// global tab
+		const bsCardResize = {
+			init: function() {
+				const bsCard = $('.bs-card');
+				const bsParent = $('.bs-card-wrap').parent('').outerWidth();
+				const bsCardwWidth = 360;
+				let percent = (bsParent / bsCardwWidth).toFixed(1);
+				// console.log(percent)
+				bsCard.css('zoom', percent);
+				this.onResize();
+			},
+			onResize: function() {
+				$(window).resize(function() {
+					setTimeout(function() {
+						bsCardResize.init();
+					}, 300)
+				})
+			}
+		}
+		bsCardResize.init();
 	</script>
 
 </body>
