--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -105,7 +105,7 @@
 					<!-- //group -->
 
 					<!-- bs-card-wrap -->
-					<div class="bs-card-wrap pb16">
+					<div class="bs-card-wrap mb16">
 						<input type="radio" name="rad001">
 						<div class="bs-card ">
 							<div class="bs-typeA">
@@ -194,7 +194,7 @@
 					<!-- //group -->
 
 					<!-- bs-card-wrap -->
-					<div class="bs-card-wrap pb16">
+					<div class="bs-card-wrap mb16">
 						<input type="radio" name="rad001">
 						<div class="bs-card ">
 							<div class="bs-typeA">
