--- a/html/PBWCA/PBWCA010000_year.html
+++ b/html/PBWCA/PBWCA010000_year.html
@@ -346,12 +346,12 @@
 							<div class="group-content">
 								<div class="inp-group py24 gap16">
 									<div class="inp inp-medium inp-combi">
-										<label>
+										<label style="flex:auto;">
 											<input type="radio" name="rad001">
 											<span class="label-title">매년 같은 날</span>
 										</label>
 										<!-- 종료일 지정 체크 시 활성화 -->
-										<div class="form" style="width:173px;">
+										<div class="form" style="flex:0 0 173px;">
 											<div class="input-wrap input-datepicker input-medium">
 												<button type="button" aria-label="날짜 선택">01-01</button>
 											</div>
