--- a/html/PBWCH/PBWCH009902_noresult.html
+++ b/html/PBWCH/PBWCH009902_noresult.html
@@ -172,12 +172,12 @@
 						<div class="btn-wrap btn-nowrap overflow-list">
 							<button type="button" class="btn-xsmall btn-primary btn-round" aria-label="비교선택"><span>KOSPI</span><i class="ico-close-16"></i></button>
 							<button type="button" class="btn-xsmall btn-primary btn-round" aria-label="비교선택"><span>KOSDAQ</span><i class="ico-close-16"></i></button>
-							<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-add"></i></button>
+							<button type="button" class="btn-xsmall btn-outlined btn-round btn-border-dashed"><i class="ico-add"></i></button>
 						</div>
 						<div class="btn-wrap btn-nowrap overflow-list">
-							<button type="button" class="btn-xsmall btn-outlined btn-round"><i class=" ico-add"></i></button>
-							<button type="button" class="btn-xsmall btn-outlined btn-round"><i class=" ico-add"></i></button>
-							<button type="button" class="btn-xsmall btn-outlined btn-round"><i class=" ico-add"></i></button>
+							<button type="button" class="btn-xsmall btn-outlined btn-round btn-border-dashed"><i class=" ico-add"></i></button>
+							<button type="button" class="btn-xsmall btn-outlined btn-round btn-border-dashed"><i class=" ico-add"></i></button>
+							<button type="button" class="btn-xsmall btn-outlined btn-round btn-border-dashed"><i class=" ico-add"></i></button>
 						</div>
 						<div class="btn-wrap">
 							<button type="button" class="btn-medium btn-primary">비교하기</button>
