--- a/html/PBWFU/PBWFU020000.html
+++ b/html/PBWFU/PBWFU020000.html
@@ -213,7 +213,7 @@
 						</div>
 						<div class="btn-wrap btn-nowrap">
 							<button type="button" class="btn-xsmall btn-primary btn-round"><span>피델리티글로벌배당인컴증권</span><i class="ico-close-16"></i></button>
-							<button type="button" class="btn-xsmall btn-outlined btn-round">비교할 펀드 추가</button>
+							<button type="button" class="btn-xsmall btn-outlined btn-round btn-border-dashed"><i class="ico-add"></i>비교할 펀드 추가</button>
 						</div>
 						<div class="btn-wrap">
 							<button type="button" class="btn-medium btn-primary">비교하기</button>
