--- a/html/PBWCA/PBWCA010000_month.html
+++ b/html/PBWCA/PBWCA010000_month.html
@@ -236,26 +236,13 @@
 					<div class="group-form mt40">
 						<div class="group-title">
 							<strong class="title-medium">공유</strong>
-							<button type="button" aria-label="공유직원 선택" data-micromodal-trigger="modal-staff"><i class="icon-only icon-24 icon-add bg-icon-default"></i></button>
 						</div>
-						<!-- 직원 선택 전 -->
-						<div class="group-content">
-							<div class="form">
-								<div class="label"></div>
-								<div class="input-wrap disabled">
-									<input type="text" placeholder="공유할 직원을 선택하세요." aria-label="제목" disabled>
-									<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
-								</div>
-								<p class="validate-text"></p>
-							</div>
-						</div>
-						<!-- //직원 선택 전 -->
 
-						<!-- 직원 선택 후 -->
 						<div class="group-content">
 							<div class="form">
 								<div class="label"></div>
 								<div class="input-wrap input-btn-wrap">
+									<button type="button" class="btn-xsmall btn-outlined btn-round btn-border-dashed" data-micromodal-trigger="modal-staff"><i class="ico-add"></i>직원 추가</button>
 									<button type="button" class="btn-xsmall btn-outlined btn-round"><span>무궁화꽃이피었습니다최대열일곱글자가노출됩니다.</span><i class="ico-close-16"></i></button>
 									<button type="button" class="btn-xsmall btn-outlined btn-round"><span>김우리 부부장(자산관리플랫폼부)</span><i class="ico-close-16"></i></button>
 								</div>
