--- a/html/PBWMA/PBWMA000000_skeletone.html
+++ b/html/PBWMA/PBWMA000000_skeletone.html
@@ -356,13 +356,13 @@
 		// MicroModal.show('modal-notice');
 	</script>
 
-	<!-- 
+
 	<script>
 		$('.content').addClass('loading')
 		setTimeout(function() {
-			$('.content').removeClass('loading')
+			// $('.content').removeClass('loading')
 		}, 3000)
-	</script> -->
+	</script>
 </body>
 
 </html>
