--- a/html/PBWMA/PBWMA040000.html
+++ b/html/PBWMA/PBWMA040000.html
@@ -137,7 +137,7 @@
 					<div class="main-exchange-section">
 
 						<div class="main-section-title">
-							<strong class="headline-small">실시간 환율조회</strong>
+							<strong class="headline-small">환율조회</strong>
 						</div>
 
 						<div class="pl12 py8">
