--- a/html/index.html
+++ b/html/index.html
@@ -996,7 +996,7 @@
 					<tr>
 						<td></td>
 						<td></td>
-						<td>실시간환율조회</td>
+						<td>환율조회</td>
 						<td></td>
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWFI050000</a></td>
