--- a/html/PBWFI/PBWFI050000.html
+++ b/html/PBWFI/PBWFI050000.html
@@ -69,7 +69,7 @@
 					<button type="button" class="header-btn" aria-label="뒤로 가기"><i class="i-back"></i></button>
 				</div>
 				<div class="center">
-					<h1>실시간환율조회</h1>
+					<h1>환율조회</h1>
 				</div>
 				<div class="right">
 					<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
