--- a/html/PBWAI/PBWAI000000.html
+++ b/html/PBWAI/PBWAI000000.html
@@ -160,7 +160,7 @@
 										<div class="left">
 											<div class="btn-rating-wrap">
 												<button type="button" class="btn-rating" aria-label="좋아요">
-													<i class="icon-only icon-20 icon-thumbsup bg-icon-gray_1"></i>
+													<i class="icon-only icon-20 icon-thumbsup bg-brandPrimary-blue400"></i>
 												</button>
 												<button type="button" class="btn-rating" aria-label="싫어요">
 													<i class="icon-only icon-20 icon-thumbsdown bg-icon-gray_1"></i>
