--- a/html/PBWCL/PBWCL020000.html
+++ b/html/PBWCL/PBWCL020000.html
@@ -96,7 +96,7 @@
 					</style>
 
 					<!-- customer-contribution-list -->
-					<div class="customer-contribution-list content-fluid pt40 px0">
+					<div class="customer-contribution-list content-fluid pt40 px0 mb-24">
 						<strong class="customer-contribution-title">조회결과</strong>
 
 						<!-- box -->
