--- a/html/PBWLO/PBWLO01002_01.html
+++ b/html/PBWLO/PBWLO01002_01.html
@@ -101,8 +101,8 @@
 
 									<div class="form">
 										<div class="input-wrap input-btn">
-											<input type="password" placeholder="비밀번호를 입력하세요." aria-label="비밀번호 입력">
-											<button type="button" class="input-password" aria-label="비밀번호 표시"></button>
+											<input type="password" placeholder="비밀번호를 입력하세요." aria-label="비밀번호 입력" readonly>
+											<!-- <button type="button" class="input-password" aria-label="비밀번호 표시"></button> -->
 										</div>
 										<p class="validate-text"></p>
 									</div>
