--- a/html/PBWCL/PBWCL000000.html
+++ b/html/PBWCL/PBWCL000000.html
@@ -97,7 +97,7 @@
 						<div class="group-content">
 							<div class="form">
 								<div class="input-wrap input-btn">
-									<input type="button" aria-label="통합고객번호" data-micromodal-trigger="modal-number-search">
+									<input type="button" value=" " aria-label="통합고객번호" data-micromodal-trigger="modal-number-search">
 									<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									<button type="button" class="input-search" data-micromodal-trigger="modal-number-search" aria-label="입력 내용 검색"></button>
 								</div>
