--- a/html/PBWIV/PBWIV130000.html
+++ b/html/PBWIV/PBWIV130000.html
@@ -114,16 +114,21 @@
 					<!-- sort-wrap -->
 
 
-					<div class="stock-analyze mt24">
+					<div class="stock-analyze mt32 headline-small">
 						<div class="top">
-							<div class="tags tags-small tags-lightBlue tags-round mr4">2023-08-09 ~ 2024-01-02</div> 기간과
+							최근 <span class="fc-brandPrimary-blue600">3개월 코스피</span> 지수는 <span class="fc-brandPrimary-blue600">과거5년</span>내
 						</div>
-						<div class="bottom mt12"><strong>71% 유사</strong>합니다.</div>
+						<div class="middle mt8">
+							<div class="tags tags-medium tags-lightBlue br12">2023-08-09 ~ 2024-01-02</div> 까지의
+						</div>
+						<div class="bottom mt8">
+                            지수와 <span class="fc-brandPrimary-blue600">71% 유사</span>합니다
+                        </div>
 					</div>
 
 					<div class="content-fluid mt32 px0">
 						<div class="box">
-							<h2 class="headline-small">과거지수로 본 미래 예측</h2>
+							<!-- <h2 class="headline-small">과거지수로 본 미래 예측</h2> -->
 
 							<div class="mt24">
 								<div style="height:180px;">
@@ -137,7 +142,7 @@
 								내용이 들어갑니다 내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다 내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다
 								내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다</p>
 
-							<p class="description caution body-small fc-typography-caption mt24">역외펀드의 경우, 데이터 제공업체로부터 제공받은 가장 최신의 수익률을 기반으로 안내하고 있으나 당일자 실제 수익률과는 차이가 있을 수 있습니다.</p>
+							<p class="description caution body-small fc-typography-caption mt24">우리은행 AI데이터 기반의 검색결과로, 예측값을 보장할 수 없습니다.</p>
 						</div>
 
 						<div class="stroke stroke4"></div>
