--- a/html/PBWMA/PBWMA040000.html
+++ b/html/PBWMA/PBWMA040000.html
@@ -137,8 +137,9 @@
 					<div class="main-exchange-section">
 
 						<div class="main-section-title">
-							<strong class="headline-small">환율조회</strong>
+							<strong class="headline-small">실시간 환율조회</strong>
 						</div>
+						<div class="caption-visible mb16 ar">고시기준일 : 2024-11-15 (단위:원)</div>
 
 						<div class="pl12 py8">
 							<ul class="label-list pl8">
@@ -294,11 +295,10 @@
 								</ul>
 							</div>
 						</div>
-						<div class="caption-visible mt8 ar">고시기준일 : 2024-11-15 (단위:원)</div>
 					</div>
 
 					<div class="btn-wrap bg-transparent">
-						<button type="button" class="btn-xsmall btn-outlined btn-round">전체 환율 보기</button>
+						<button type="button" class="btn-xsmall btn-outlined btn-round">전체보기<i class="ico-chevron"></i></button>
 					</div>
 
 
