--- a/html/PBWMA/PBWMA040000_skeletone.html
+++ b/html/PBWMA/PBWMA040000_skeletone.html
@@ -226,7 +226,7 @@
 					</div>
 
 					<div class="btn-wrap bg-transparent">
-						<button type="button" class="btn-xsmall btn-outlined btn-round">전체 환율 보기</button>
+						<button type="button" class="btn-xsmall btn-outlined btn-round">전체보기<i class="ico-chevron"></i></button>
 					</div>
 
 
