--- a/html/PBWMA/PBWMA020000.html
+++ b/html/PBWMA/PBWMA020000.html
@@ -100,7 +100,7 @@
 						<div class="main-section-title">
 							<strong class="headline-small">주요 지수</strong>
 							<a href="#" aria-label="설정">
-								<i class="icon-only icon-24 icon-setting bg-icon-gray_1"></i>
+								<i class="icon-only icon-24 icon-setting bg-icon-gray_2"></i>
 							</a>
 						</div>
 						<div class="main-stock-list mt24">
@@ -109,6 +109,12 @@
 								<a href="#" class="btn-medium btn-primary btn-round">지수 찾기<i class="ico-chevron bg-icon-white"></i></a>
 							</div>
 							<ul class="overflow-list">
+								<li>
+									<button type="button">
+										<i class="icon-only icon-16 icon-add bg-typography-placeholder"></i>
+										<strong class="title-small fc-typography-placeholder">지수 추가</strong>
+									</button>
+								</li>
 								<li>
 									<a href="#">
 										<dl>
