--- a/html/PBWFU/PBWFU000000.html
+++ b/html/PBWFU/PBWFU000000.html
@@ -263,127 +263,347 @@
 							<strong class="headline-small inner-ico"><i class="ico-keyword bg-yellow-500"></i>추천 키워드</strong>
 						</div>
 						<div class="group-content content-fluid px0">
-							<!-- tab-content -->
-							<div class="tab-content">
-								<ul class="tab-list tab-col overflow-list px24" role="tablist">
-									<li class="tab tab-active"><a role="tab" href="#" class="fs-18">수익률 BEST</a></li>
-									<li class="tab"><a role="tab" href="#" class="fs-18">섹터</a></li>
-									<li class="tab"><a role="tab" href="#" class="fs-18">국가</a></li>
-								</ul>
-							</div>
-							<!-- //tab-content -->
-							<div class="tab-content">
-								<div class="keyword-list">
-									<button type="button">
-										<span>텍스트</span>
-										<span class="rise" aria-label="상승">0.0%</span>
-									</button>
-									<button type="button" class="fw-700">
-										<span>텍스트</span>
-										<span class="rise" aria-label="상승">0.0%</span>
-									</button>
-									<button type="button">
-										<span>텍스트</span>
-										<span class="fall" aria-label="하락">0.0%</span>
-									</button>
-									<button type="button" class="fw-700">
-										<span>텍스트</span>
-										<span class="fall" aria-label="하락">0.0%</span>
-									</button>
-									<button type="button">
-										<span>텍스트</span>
-										<span class="steady" aria-label="보합">0.00%</span>
-									</button>
-									<button type="button">
-										<span>IT/정보기술</span>
-									</button>
-									<button type="button">
-										<span>에너지/원유</span>
-									</button>
-									<button type="button">
-										<span>소재/광물</span>
-									</button>
-									<button type="button">
-										<span>소비재</span>
-									</button>
-									<button type="button">
-										<span>헬스케어</span>
-									</button>
-									<button type="button">
-										<span>금융</span>
-									</button>
-									<button type="button">
-										<span>부동산/리즈</span>
-									</button>
-									<button type="button">
-										<span>유틸리티/인프라</span>
-									</button>
-									<button type="button">
-										<span>반도체</span>
-									</button>
-									<button type="button">
-										<span>로봇</span>
-									</button>
-									<button type="button">
-										<span>전기차/배터리</span>
-									</button>
-									<button type="button">
-										<span>우주/항공</span>
-									</button>
-									<button type="button">
-										<span>친환경/탄소중립</span>
-									</button>
-									<button type="button">
-										<i class="flag flag-kr"></i>
-										<span>한국</span>
-									</button>
-									<button type="button">
-										<i class="flag flag-us"></i>
-										<span>미국</span>
-									</button>
-									<button type="button">
-										<i class="flag flag-europe"></i>
-										<span>유럽</span>
-									</button>
-									<button type="button">
-										<i class="flag flag-jp"></i>
-										<span>일본</span>
-									</button>
-									<button type="button">
-										<i class="flag flag-cn"></i>
-										<span>중국</span>
-									</button>
-									<button type="button">
-										<i class="flag flag-in"></i>
-										<span>인도</span>
-									</button>
-									<button type="button">
-										<i class="flag flag-vn"></i>
-										<span>베트남</span>
-									</button>
-									<button type="button">
-										<i class="flag flag-asia"></i>
-										<span>아시아/태평양</span>
-									</button>
-									<button type="button">
-										<i class="flag flag-south-america"></i>
-										<span>브라질/남미</span>
-									</button>
-									<button type="button">
-										<i class="flag flag-global"></i>
-										<span>글로벌</span>
-									</button>
-									<button type="button">
-										<i class="flag flag-emerging"></i>
-										<span>이머징/신흥국</span>
-									</button>
-									<button type="button">
-										<i class="flag flag-foreign"></i>
-										<span>해외</span>
-									</button>
+
+							<!-- Swiper -->
+							<div class="swiper keyword-swiper">
+								<div class="swiper-pagination swiper-pagination-tab overflow-list px24"></div>
+								<div class="swiper-wrapper">
+									<div class="swiper-slide">
+										<div class="keyword-list">
+											<button type="button">
+												<span>텍스트</span>
+												<span class="rise" aria-label="상승">0.0%</span>
+											</button>
+											<button type="button" class="fw-700">
+												<span>텍스트</span>
+												<span class="rise" aria-label="상승">0.0%</span>
+											</button>
+											<button type="button">
+												<span>텍스트</span>
+												<span class="fall" aria-label="하락">0.0%</span>
+											</button>
+											<button type="button" class="fw-700">
+												<span>텍스트</span>
+												<span class="fall" aria-label="하락">0.0%</span>
+											</button>
+											<button type="button">
+												<span>텍스트</span>
+												<span class="steady" aria-label="보합">0.00%</span>
+											</button>
+											<button type="button">
+												<span>IT/정보기술</span>
+											</button>
+											<button type="button">
+												<span>에너지/원유</span>
+											</button>
+											<button type="button">
+												<span>소재/광물</span>
+											</button>
+											<button type="button">
+												<span>소비재</span>
+											</button>
+											<button type="button">
+												<span>헬스케어</span>
+											</button>
+											<button type="button">
+												<span>금융</span>
+											</button>
+											<button type="button">
+												<span>부동산/리즈</span>
+											</button>
+											<button type="button">
+												<span>유틸리티/인프라</span>
+											</button>
+											<button type="button">
+												<span>반도체</span>
+											</button>
+											<button type="button">
+												<span>로봇</span>
+											</button>
+											<button type="button">
+												<span>전기차/배터리</span>
+											</button>
+											<button type="button">
+												<span>우주/항공</span>
+											</button>
+											<button type="button">
+												<span>친환경/탄소중립</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-kr"></i>
+												<span>한국</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-us"></i>
+												<span>미국</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-europe"></i>
+												<span>유럽</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-jp"></i>
+												<span>일본</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-cn"></i>
+												<span>중국</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-in"></i>
+												<span>인도</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-vn"></i>
+												<span>베트남</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-asia"></i>
+												<span>아시아/태평양</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-south-america"></i>
+												<span>브라질/남미</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-global"></i>
+												<span>글로벌</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-emerging"></i>
+												<span>이머징/신흥국</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-foreign"></i>
+												<span>해외</span>
+											</button>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="keyword-list">
+											<button type="button">
+												<span>텍스트</span>
+												<span class="rise" aria-label="상승">0.0%</span>
+											</button>
+											<button type="button" class="fw-700">
+												<span>텍스트</span>
+												<span class="rise" aria-label="상승">0.0%</span>
+											</button>
+											<button type="button">
+												<span>텍스트</span>
+												<span class="fall" aria-label="하락">0.0%</span>
+											</button>
+											<button type="button" class="fw-700">
+												<span>텍스트</span>
+												<span class="fall" aria-label="하락">0.0%</span>
+											</button>
+											<button type="button">
+												<span>텍스트</span>
+												<span class="steady" aria-label="보합">0.00%</span>
+											</button>
+											<button type="button">
+												<span>IT/정보기술</span>
+											</button>
+											<button type="button">
+												<span>에너지/원유</span>
+											</button>
+											<button type="button">
+												<span>소재/광물</span>
+											</button>
+											<button type="button">
+												<span>소비재</span>
+											</button>
+											<button type="button">
+												<span>헬스케어</span>
+											</button>
+											<button type="button">
+												<span>금융</span>
+											</button>
+											<button type="button">
+												<span>부동산/리즈</span>
+											</button>
+											<button type="button">
+												<span>유틸리티/인프라</span>
+											</button>
+											<button type="button">
+												<span>반도체</span>
+											</button>
+											<button type="button">
+												<span>로봇</span>
+											</button>
+											<button type="button">
+												<span>전기차/배터리</span>
+											</button>
+											<button type="button">
+												<span>우주/항공</span>
+											</button>
+											<button type="button">
+												<span>친환경/탄소중립</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-kr"></i>
+												<span>한국</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-us"></i>
+												<span>미국</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-europe"></i>
+												<span>유럽</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-jp"></i>
+												<span>일본</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-cn"></i>
+												<span>중국</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-in"></i>
+												<span>인도</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-vn"></i>
+												<span>베트남</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-asia"></i>
+												<span>아시아/태평양</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-south-america"></i>
+												<span>브라질/남미</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-global"></i>
+												<span>글로벌</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-emerging"></i>
+												<span>이머징/신흥국</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-foreign"></i>
+												<span>해외</span>
+											</button>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="keyword-list">
+											<button type="button">
+												<span>텍스트</span>
+												<span class="rise" aria-label="상승">0.0%</span>
+											</button>
+											<button type="button" class="fw-700">
+												<span>텍스트</span>
+												<span class="rise" aria-label="상승">0.0%</span>
+											</button>
+											<button type="button">
+												<span>텍스트</span>
+												<span class="fall" aria-label="하락">0.0%</span>
+											</button>
+											<button type="button" class="fw-700">
+												<span>텍스트</span>
+												<span class="fall" aria-label="하락">0.0%</span>
+											</button>
+											<button type="button">
+												<span>텍스트</span>
+												<span class="steady" aria-label="보합">0.00%</span>
+											</button>
+											<button type="button">
+												<span>IT/정보기술</span>
+											</button>
+											<button type="button">
+												<span>에너지/원유</span>
+											</button>
+											<button type="button">
+												<span>소재/광물</span>
+											</button>
+											<button type="button">
+												<span>소비재</span>
+											</button>
+											<button type="button">
+												<span>헬스케어</span>
+											</button>
+											<button type="button">
+												<span>금융</span>
+											</button>
+											<button type="button">
+												<span>부동산/리즈</span>
+											</button>
+											<button type="button">
+												<span>유틸리티/인프라</span>
+											</button>
+											<button type="button">
+												<span>반도체</span>
+											</button>
+											<button type="button">
+												<span>로봇</span>
+											</button>
+											<button type="button">
+												<span>전기차/배터리</span>
+											</button>
+											<button type="button">
+												<span>우주/항공</span>
+											</button>
+											<button type="button">
+												<span>친환경/탄소중립</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-kr"></i>
+												<span>한국</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-us"></i>
+												<span>미국</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-europe"></i>
+												<span>유럽</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-jp"></i>
+												<span>일본</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-cn"></i>
+												<span>중국</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-in"></i>
+												<span>인도</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-vn"></i>
+												<span>베트남</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-asia"></i>
+												<span>아시아/태평양</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-south-america"></i>
+												<span>브라질/남미</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-global"></i>
+												<span>글로벌</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-emerging"></i>
+												<span>이머징/신흥국</span>
+											</button>
+											<button type="button">
+												<i class="flag flag-foreign"></i>
+												<span>해외</span>
+											</button>
+										</div>
+									</div>
 								</div>
 							</div>
-
+							<!-- tab-content -->
 						</div>
 					</div>
 					<!-- //group-form -->
@@ -429,7 +649,18 @@
 	</div>
 	<!-- //micromodal -->
 
-
+	<script>
+		const tab = ['수익률 BEST', '섹터', '국가']
+		var swiper = new Swiper(".keyword-swiper", {
+			pagination: {
+				el: ".swiper-pagination",
+				clickable: true,
+				renderBullet: function(index, className) {
+					return `<span class="${className}"><button>${tab[index]}</button></span>`
+				},
+			},
+		});
+	</script>
 
 </body>
 
