--- a/html/PBWLO/PBWLO01002_05.html
+++ b/html/PBWLO/PBWLO01002_05.html
@@ -73,14 +73,9 @@
 				<div class="content">
 
 					<!-- division-center -->
-					<div class="division-center">
+					<div class="">
 
 						<div class="login login-bio">
-
-							<picture>
-								<source srcset="/resources/@temp/thumb_w.png">
-								<img src="/resources/@temp/thumb_w.png" alt="">
-							</picture>
 
 							<!-- tab-content -->
 							<p class="title-large my24 ac">통합로그인에 실패했습니다. <br> 비밀번호를 입력해주세요.</p>
