--- a/html/PBWLO/PBWLO01002_04.html
+++ b/html/PBWLO/PBWLO01002_04.html
@@ -73,14 +73,9 @@
 				<div class="content">
 
 					<!-- division-center -->
-					<div class="division-center">
+					<div class="">
 
 						<div class="login login-bio">
-
-							<picture>
-								<source srcset="/resources/@temp/thumb_w.png">
-								<img src="/resources/@temp/thumb_w.png" alt="">
-							</picture>
 
 							<!-- tab-content -->
 							<div class="tab-content tab-fluid">
